<resources>
    <string name="app_name">Gezdir</string>
    <string name="gezdir">Gezdir</string>
    <string name="kesfet">Keşfet</string>
    <string name="giris">Giriş</string>
    <string name="kaydol">Kaydol</string>
    <string name="eglenceli_g">Eğlenceli Gezdirenlerle <b>daha çok yer keşfedin.</b></string>
    <string name="guvenilir_gezdirenler">Gezdir, güvenilir Gezdirenlerin kendilerine uygun meraklı gezginlerle buluştuğu, topluluk mantığıyla işleyen özgürlükçü bir çalışma ve eğlence platformudur.</string>
    <string name="hadi_basla">Hadi başla</string>
    <string name="gezdir_gezdirenleri">Gezdir <b>Gezdirenleri</b></string>
    <string name="kendi_alanlarinda">Kendi alanlarında güvenilir, özenle seçilmiş Gezdirenlerimizle tanışın.</string>
    <string name="istanbul">İstanbul</string>
    <string name="den_fazla_ilan">100\'den fazla ilan sizi bekliyor.</string>
    <string name="price">600 ₺</string>
    <string name="ortalama_fiyat">Ortalama fiyat</string>
    <string name="daha_fazlasi">Daha fazlası</string>
    <string name="x">x</string>
    <string name="neye_ihtiyacin_var">Neye <b>ihtiyacın var?</b></string>
    <string name="gezdiren_ol">Gezdiren olarak iş mi arıyorsun yoksa eğlenceli, tecrübeli ve güvenilir  Gezdirenlere mi ihtiyacın var?</string>
    <string name="hizmet_satin_al">Hizmet satın almak istiyorum.</string>
    <string name="beAGezdiren">Gezdiren olmak istiyorum.</string>
    <string name="devam_et">Devam Et</string>
    <string name="profil_olu_">Profil <b>Oluştur</b></string>
    <string name="gezdiren_olmadan">Gezdiren olmadan önce profilini oluşturarak Gezdir\'e  kayıt olmalısın.</string>
    <string name="gezdir_e_ka">Gezdir\'e kayıt yaparak <b>Gizlilik Sözleşmesi</b> ve <b>Kullanıcı Sözleşmesini</b> kabul etmiş olursun.</string>
    <string name="ye_giri_i">Üye Girişi</string>
    <string name="uye_giri_i">Üye <b>Girişi</b></string>
    <string name="daha_nce_ge">Daha önce gezdir profili oluşturduysan üye girişi yaparak devam edebilirsin.</string>
    <string name="hesab_n_yok">Hesabın yok mu? Hemen <b>Kayıt Ol</b></string>
    <string name="merhaba_muh">Merhaba, <b>Muhammed</b></string>
    <string name="sana_zel_re">Sana özel rehberlik hizmetine hoş geldin!</string>
    <string name="en_pop_ler_">Tüm <b>İlanlar</b></string>
    <string name="en_ok_terci">En Çok Tercih Edilen <b>İlanlar</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ad_detail">AdDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="gezi_içeriği">Gezi <b>İçeriği</b></string>
    <string name="ilan_olustur">İlan <b>Oluştur</b></string>
    <string name="ilan_düzenle">İlan <b>Düzenle</b></string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_loading_screen">LoadingScreenActivity</string>
</resources>