<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/advertCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="11dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toTopOf="@+id/textViewUsername"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="@drawable/img" />
            <!-- İstanbul -->
            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:ellipsize="marquee"
                android:fontFamily="@font/sarabun_bold"
                android:gravity="center_horizontal|center_vertical"
                android:maxLines="1"
                android:paddingHorizontal="5dp"
                android:text="İstanbul"
                android:textAppearance="@style/istanbul"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image" />
            <!--
            Font family: Sarabun
            Line height: 24sp
            -->

            <!-- 100’den fazla ilan sizi bekliyor. -->
            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:ellipsize="marquee"
                android:fontFamily="@font/sarabun_light"
                android:gravity="center_horizontal|center_vertical"
                android:maxLines="1"
                android:paddingHorizontal="5dp"
                android:text="@string/den_fazla_ilan"
                android:textAppearance="@style/den_fazla_ilan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewUsername" />
            <!--
            Font family: Sarabun
            Line height: 14sp
            -->

            <!-- 600 ₺ -->
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/sarabun_bold"
                android:gravity="center_vertical"
                android:text="@string/price"
                android:textAppearance="@style/price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

            <TextView
                android:id="@+id/ortalama_fiyat"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:text="@string/ortalama_fiyat"
                android:textAppearance="@style/ortalama_fiyat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price" />

            <!-- Ortalama fiyat -->
            <!--
            Font family: Sarabun
            Line height: 11sp
            -->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>